attempted niv1984 downloader, and tweaks

--- a/tex/README
+++ b/tex/README
@@ -216,3 +216,8 @@ BUGS:
     Table of contents
 
     First and last verse references in page header
+
+    Afrikaans version capitalisation correction: GeseËNd
+
+    1 Peter 3:22 spacing Afrikaans extra blank line before drop caps
+
