Fonts fixed, widow chapters fixed kinda

--- a/tex/README
+++ b/tex/README
@@ -221,3 +221,8 @@ BUGS:
 
     1 Peter 3:22 spacing Afrikaans extra blank line before drop caps
 
+    We need better paragraph breaks.  Synchronisation of paragraphs should be
+    preferred, but not forced.
+
+    Chosen font is not used
+
