--- a/tex/bibl2.tex
+++ b/tex/bibl2.tex
@@ -3,17 +3,19 @@
 % !TEX TS-program = XeLaTeX
 \documentclass[10pt,twoside,openany,a4paper]{book} 
 % \usepackage{microtype} % Improves spacing
-\usepackage{fontspec,xunicode}
-\defaultfontfeatures{Scale=MatchLowercase}
-\setromanfont[Numbers=Uppercase]{New Standard}
-\setmonofont[Scale=0.90,Ligatures=NoCommon]{Courier New}
+\usepackage{fontspec}
+% \usepackage{xunicode}
 \usepackage[margin=0.8in]{geometry}
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
+%\usepackage[T1]{fontenc}      % Don't do this - it causes pdf fonts not to happen
 \usepackage{paracol}
 \usepackage{lettrine}
 \usepackage[bf,sf,center]{titlesec} % Required for modifying section titles -   bold, sans-serif, centered
 \usepackage{fancyhdr}
+\usepackage{needspace}
+%\usepackage{etoolbox}
+%\usepackage{xltxtra}
+%\usepackage{setspace}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\setulmarginsandblock{2cm}{2cm}{*}
 %\setlrmarginsandblock{2cm}{2cm}{*}
@@ -27,6 +29,13 @@
 \fancyhead[C]{\textbf{\textsf{\thepage}}} % Bottom center footer
 \renewcommand{\headrulewidth}{0.0pt}
 \renewcommand{\footrulewidth}{0.0pt}
+%
+\defaultfontfeatures{Scale=MatchLowercase}
+%\setromanfont[Numbers=Uppercase]{New Standard}
+%\setromanfont[Numbers=Uppercase]{Arial}
+\fontspec{Arial}
+\setmainfont[Numbers=Uppercase]{Times New Roman}
+\setmonofont[Scale=0.90,Ligatures=NoCommon]{Courier New}
 %\usepackage{fontspec}  
 %\setmainfont[Ligatures=TeX]{Linux Libertine O}  
 %\usepackage{metalogo,hyperref}  
@@ -63,7 +72,9 @@
 %%  \setsecheadstyle{\marginhead}
 \renewcommand{\verse}[1]{\textsuperscript{\textbf{#1}}}
 \newcommand{\biblchapter}[1]{\textbf{\Huge #1}\addcontentsline{toc}{chapter}{#1}\nopagebreak}
+% \newcommand{\biblchapters}[2]{\vspace{2cm}%
 \newcommand{\biblchapters}[2]{\vspace{2cm}%
+\needspace{5\baselineskip}
 \begin{paracol}{2}%
 \textbf{\Huge #1}%
 \switchcolumn
@@ -71,13 +82,17 @@
 \end{paracol}\nopagebreak}
 %% \setlength{\abnormalparskip{1pt}}
 %%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\bibldropcapschapter}[1]{\lettrine[lines=2, findent=3pt, nindent=0pt, loversize=0.4]{#1}}
+\newcommand{\bibldropcapschapter}[1]{\needspace{3\baselineskip}\lettrine[lines=2, lhang=0.05, findent=3pt, nindent=0pt, loversize=0.4]{\textbf{#1}}{}}
 % Work around lettrine bug with "Fpar" definition from https://tex.stackexchange.com/questions/369868/using-lettrine-with-short-paragraphs :
 \def\biblsyntheticpar{\hfil\vadjust{\vskip\parskip}\break\indent}
 % Don't warn for slightly overfull hboxen
 \hfuzz=2pt
 % All our vertical stuff is bad for now
 \vbadness=10001
+% Try to avoid stranded chapter header at the bottom of the page (this doesn't work)
+\widowpenalty=1000
+\clubpenalty=1000
+% Pretty separater
 \setlength{\columnseprule}{0.3pt}
 \begin{document}
 %\tableofcontents
