Put chapter numbers in heading because paracol

--- a/tex/bibl.tex
+++ b/tex/bibl.tex
@@ -73,14 +73,16 @@
 \def\biblsyntheticpar{\hfil\vadjust{\vskip\parskip}\break\indent}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
-\setmainfont[Numbers=Uppercase]{Arial}
+\setmainfont[Numbers=Uppercase]{Playfair Display}
 \mainmatter
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \book{Genesis}
 \begin{paracol}{2}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\lettrine[lines=4, findent=3pt, nindent=0pt]{1}
+\lettrine[lines=4, findent=3pt, nindent=0pt]{1}{}
+{\centering{\emph{For the choirmaster, on my stringed instruments, according to something}}}
+\biblsyntheticpar
 IN die begin het God die hemel en die aarde geskape.
 \biblsyntheticpar
 \verse{2}En die aarde was woes en leeg, en duisternis was op die wêreldvloed, en die Gees van God het gesweef op die waters.
