--- a/tex/bibl2.tex
+++ b/tex/bibl2.tex
@@ -26,18 +26,19 @@
 \setlength{\parskip}{0cm plus4mm minus1pt}
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[L]{\textsf{\rightmark}} % Top left header
-\fancyhead[R]{\textsf{\leftmark}} % Top right header
+\fancyhead[L]{\textsf{\leftmark}} % Top left header
+\fancyhead[R]{\textsf{\rightmark}} % Top right header
 \fancyhead[C]{\textbf{\textsf{\thepage}}} % Bottom center footer
-\renewcommand{\headrulewidth}{0.0pt}
+\renewcommand{\headrulewidth}{0.1pt}
 \renewcommand{\footrulewidth}{0.0pt}
 %
 \defaultfontfeatures{Scale=MatchLowercase}
 %\setromanfont[Numbers=Uppercase]{New Standard}
 %\setromanfont[Numbers=Uppercase]{Arial}
 \fontspec{Arial}
-\setmainfont[Numbers=Uppercase]{Times New Roman}
+\setmainfont[Numbers=Uppercase]{Georgia}
 \setmonofont[Scale=0.90,Ligatures=NoCommon]{Courier New}
+\fontsize{10}{1.2}\selectfont
 %\usepackage{fontspec}  
 %\setmainfont[Ligatures=TeX]{Linux Libertine O}  
 %\usepackage{metalogo,hyperref}  
@@ -73,6 +74,7 @@
 %%  \setaftersecskip{0em}
 %%  \setsecheadstyle{\marginhead}
 \renewcommand{\verse}[1]{\textsuperscript{\textbf{#1}}}
+\newcommand{\biblpagetitles}[2]{\markboth{#1}{#2}}
 \newcommand{\biblchapter}[1]{\textbf{\Huge #1}\addcontentsline{toc}{chapter}{#1}\nopagebreak}
 % \newcommand{\biblchapters}[2]{\vspace{2cm}%
 \newcommand{\biblchapters}[2]{\vspace{2cm}%
@@ -84,7 +86,7 @@
 \end{paracol}\nopagebreak}
 %% \setlength{\abnormalparskip{1pt}}
 %%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\bibldropcapschapter}[1]{\needspace{3\baselineskip}\lettrine[lines=2, lhang=0.05, findent=3pt, nindent=3pt, loversize=0.4]{\textbf{#1}}{}}
+\newcommand{\bibldropcapschapter}[1]{\needspace{3\baselineskip}\lettrine[lines=2, lraise=0.1, lhang=0.05, findent=3pt, nindent=3pt, loversize=0.1]{\textbf{#1}}{}}
 % Work around lettrine bug with "Fpar" definition from https://tex.stackexchange.com/questions/369868/using-lettrine-with-short-paragraphs :
 \def\biblsyntheticpar{\hfil\vadjust{\vskip\parskip}\break\indent}
 % Don't warn for slightly overfull hboxen
