--- a/tex/bibl.tex
+++ b/tex/bibl.tex
@@ -201,8 +201,8 @@ IN die begin het God die hemel en die aarde geskape.
 \verse{4}These are the generations of the heavens and of the earth when they were created, in the day that the \textsc{Lord} God made the earth and the heavens, 
 \verse{5}And every plant of the field before it was in the earth, and every herb of the field before it grew: for the LORD God had not caused it to rain upon the earth, and there was not a man to till the ground.  
 \verse{6}But there went up a mist from the earth, and watered the whole face of the ground.  
-\verse{7}And the LORD God formed man of the dust of the ground, and breathed into his nostrils the breath of life; and man became a living soul.  
-\verse{8}And the LORD God planted a garden eastward in Eden; and there he put the man whom he had formed.  
+\verse{7}And the L{\footnotesize ORD} God formed man of the dust of the ground, and breathed into his nostrils the breath of life; and man became a living soul.  
+\verse{8}And the L{\small ORD} God planted a garden eastward in Eden; and there he put the man whom he had formed.  
 \verse{9}And out of the ground made the LORD God to grow every tree that is pleasant to the sight, and good for food; the tree of life also in the midst of the garden, and the tree of knowledge of good and evil.  
 \verse{10}And a river went out of Eden to water the garden; and from thence it was parted, and became into four heads.  
 \verse{11}The name of the first is Pison: that is it which compasseth the whole land of Havilah, where there is gold; 
